[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/UI/Radar.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/Enemy.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Player.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Hero.png" type="Texture" id=4]
[ext_resource path="res://MiniMap.gd" type="Script" id=5]

[node name="MiniMap" type="MarginContainer"]
margin_right = 200.0
margin_bottom = 200.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
visible = false
self_modulate = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
margin_left = 5.0
margin_top = 5.0
margin_right = 195.0
margin_bottom = 195.0
texture = ExtResource( 1 )
region_rect = Rect2( 81.8975, 87.6509, 342.998, 337.568 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 195.0
margin_bottom = 195.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Grid" type="TextureRect" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 180.0
margin_bottom = 180.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="PlayerMarker" type="Sprite" parent="MarginContainer/Grid"]
position = Vector2( 85, 85 )
texture = ExtResource( 3 )

[node name="HeroMarker" type="Sprite" parent="MarginContainer/Grid"]
visible = false
position = Vector2( 46.5724, 55.3918 )
texture = ExtResource( 4 )

[node name="EnemyMarker" type="Sprite" parent="MarginContainer/Grid"]
visible = false
position = Vector2( 119.648, 117.758 )
texture = ExtResource( 2 )
